Mise en place less sur Accueil

--- a/css/Accueil.less
+++ b/css/Accueil.less
@@ -1,3 +1,9 @@
+@white: #ffffff;
+@green: #1ba18b;
+
+
+
+
 #wb_header {
     height: 698px;
     background: transparent none repeat scroll left top;
@@ -282,7 +288,7 @@ body,
 }
 
 #div_bouton_LaRegionParisienne_enSavoirPlus a {
-    border: 2px solid #ffffff;
+    border: 2px solid @white;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
@@ -292,7 +298,7 @@ body,
     font-size: 13px;
     font-style: normal;
     font-weight: bold;
-    color: #ffffff;
+    color: @white;
     background: transparent none repeat scroll left top;
 }
 
@@ -300,7 +306,7 @@ body,
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
-    color: #ffffff;
+    color: @white;
     background: #086b61 none repeat scroll left top;
 }
 
@@ -465,7 +471,7 @@ body,
     -moz-border-radius: 0 0 0 0;
     border-radius: 0 0 0 0;
     opacity: 1;
-    background: #ffffff;
+    background: @white;
 }
 
 #div_cadre_evenementavenir {
@@ -487,7 +493,7 @@ body,
     -moz-border-radius: 0 0 0 0;
     border-radius: 0 0 0 0;
     opacity: 1;
-    background: #ffffff;
+    background: @white;
 }
 
 #div_bouton_savoirplus_evenementavenir {
@@ -521,7 +527,7 @@ body,
     font-size: 13px;
     font-style: normal;
     font-weight: bold;
-    color: #1ba18b;
+    color: @green;
     background: transparent none repeat scroll left top;
 }
 
@@ -529,7 +535,7 @@ body,
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
-    color: #ffffff;
+    color: @white;
     background: #086b61 none repeat scroll left top;
 }
 
@@ -572,7 +578,7 @@ body,
     font-size: 13px;
     font-style: normal;
     font-weight: bold;
-    color: #1ba18b;
+    color: @green;
     background: transparent none repeat scroll left top;
 }
 
@@ -580,7 +586,7 @@ body,
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
-    color: #ffffff;
+    color: @white;
     background: #086b61 none repeat scroll left top;
 }
 
@@ -624,7 +630,7 @@ body,
 }
 
 #div_bouton_savoirplus_conseilsdevoyage a {
-    border: 2px solid #ffffff;
+    border: 2px solid @white;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
@@ -634,7 +640,7 @@ body,
     font-size: 13px;
     font-style: normal;
     font-weight: bold;
-    color: #ffffff;
+    color: @white;
     background: transparent none repeat scroll left top;
 }
 
@@ -642,7 +648,7 @@ body,
     text-decoration: none;
     font-style: normal;
     font-weight: bold;
-    color: #ffffff;
+    color: @white;
     background: #086b61 none repeat scroll left top;
 }
 
