maj less guide pratique

--- a/css/A_Visiter.less
+++ b/css/A_Visiter.less
@@ -114,17 +114,16 @@ body,
     height: 110px;
     min-height: 110px;
     min-width: 360px;
-}
-
-#logo_position > div {
-    width: 360px;
-    height: 110px;
-    border: 5px none #C0C0C0;
-    -webkit-border-radius: 0 0 0 0;
-    -moz-border-radius: 0 0 0 0;
-    border-radius: 0 0 0 0;
-    opacity: 0.3;
-    background: transparent;
+    > div {
+        width: 360px;
+        height: 110px;
+        border: 5px none #C0C0C0;
+        -webkit-border-radius: 0 0 0 0;
+        -moz-border-radius: 0 0 0 0;
+        border-radius: 0 0 0 0;
+        opacity: 0.3;
+        background: transparent;
+    }
 }
 
 #logo {
