--- a/css/Accueil.less
+++ b/css/Accueil.less
@@ -5,12 +5,13 @@
 
 
 #wb_header {
-    height: 698px;
+    height: 0px;
     background: transparent none repeat scroll left top;
 }
 
-#wb_header {
+#haut_de_page{
     height: 698px;
+    background: transparent none repeat scroll left top;
 }
 
 #wb_main {
@@ -19,18 +20,13 @@
     background: transparent none repeat scroll left top;
 }
 
-#wb_main {
-    height: 623px;
-}
+
 
 #wb_footer {
     height: 80px;
     background: transparent none repeat scroll left top;
 }
 
-#wb_footer {
-    height: 80px;
-}
 
 body {
     background: #fcf3d2 url("../gallery/215ed0bac1a427d88943879d41a5115f.jpg") no-repeat scroll center top;
@@ -38,13 +34,10 @@ body {
 
 .wb_sbg {
     background: transparent url("../gallery/dad763187c3171ad64b3e88d1d511a44.jpg") repeat-x scroll center bottom;
-}
-
-body,
-.wb_sbg {
     min-height: 2461px;
     min-width: 992px;
 }
+
 
 .root {
     width: 992px;
@@ -92,7 +85,6 @@ body,
     background: transparent none repeat scroll left top;
 }
 
-#div_menu li:hover > a,
 #div_menu li:focus > a {
     border: 0 none #000000;
     text-decoration: none;
@@ -122,7 +114,7 @@ body,
     min-width: 300px;
 }
 
-#wb_element_instance3 {
+#div_instagram {
     display: block;
     z-index: 180;
     top: 27px;
@@ -133,15 +125,9 @@ body,
     min-width: 32px;
 }
 
-#wb_element_instance3 img {
-    position: static;
-    top: 0;
-    left: 0;
-    width: 32px;
-    height: 32px;
-}
 
-#wb_element_instance4 {
+
+#div_facebook {
     display: block;
     z-index: 181;
     top: 27px;
@@ -152,13 +138,6 @@ body,
     min-width: 32px;
 }
 
-#wb_element_instance4 img {
-    position: static;
-    top: 0;
-    left: 0;
-    width: 32px;
-    height: 32px;
-}
 
 #div_ecriture_nombasdepage {
     display: block;
@@ -182,7 +161,7 @@ body,
     min-width: 110px;
 }
 
-#wb_element_instance7 {
+#div_twitter {
     display: block;
     z-index: 184;
     top: 27px;
@@ -191,14 +170,6 @@ body,
     height: 32px;
     min-height: 32px;
     min-width: 32px;
-}
-
-#wb_element_instance7 img {
-    position: static;
-    top: 0;
-    left: 0;
-    width: 32px;
-    height: 32px;
 }
 
 #div_ecriture_Paris {
@@ -267,6 +238,15 @@ body,
     min-width: 270px;
 }
 
+#div_ecriture_LaRegionParisienne p {
+    text-align: center;
+    face: Sylfaen;
+    color: #ffffff;
+    font-size: 20px;
+    line-height: normal;
+}
+
+
 #div_bouton_LaRegionParisienne_enSavoirPlus {
     display: block;
     z-index: 85;
@@ -278,13 +258,12 @@ body,
     min-width: 110px;
 }
 
-#div_bouton_LaRegionParisienne_enSavoirPlus a span {
-    padding: 8px 0 0 0;
-}
+
 
 #div_bouton_LaRegionParisienne_enSavoirPlus a {
     width: 106px;
     height: 36px;
+    padding: 8px 0 0 0;
 }
 
 #div_bouton_LaRegionParisienne_enSavoirPlus a {
@@ -329,6 +308,11 @@ body,
     min-width: 280px;
 }
 
+#div_ecriture_guidevoyage p {
+    text-align: center;
+    line-height: normal;
+}
+
 #div_ecriture_visiteinoubliable {
     display: block;
     z-index: 68;
@@ -338,6 +322,10 @@ body,
     height: 24px;
     min-height: 24px;
     min-width: 350px;
+}
+
+#div_ecriture_visiteinoubliable h1 {
+    text-align: center;
 }
 
 #div_image_evenementavenir {
@@ -682,14 +670,14 @@ body,
     min-width: 200px;
 }
 
-#wb_element_instance30 {
+#div_instagram0 {
     display: block;
     z-index: 9000;
     top: 643px;
     left: 0;
 }
 
-#wb_element_instance31 {
+#div_instagram1 {
     display: block;
     z-index: 9999;
     top: 79px;
@@ -698,7 +686,7 @@ body,
 
 @media(min-width:768px) {
     #wb_header {
-        height: 698px;
+        height: 0px;
     }
 
     #wb_main {
@@ -741,7 +729,7 @@ body,
         min-width: 300px;
     }
 
-    #wb_element_instance3 {
+    #div_instagram {
         display: block;
         top: 27px;
         left: 900px;
@@ -751,15 +739,7 @@ body,
         min-width: 32px;
     }
 
-    #wb_element_instance3 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
-    }
-
-    #wb_element_instance4 {
+    #div_facebook {
         display: block;
         top: 27px;
         left: 850px;
@@ -769,13 +749,6 @@ body,
         min-width: 32px;
     }
 
-    #wb_element_instance4 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
-    }
 
     #div_ecriture_nombasdepage {
         display: block;
@@ -797,7 +770,7 @@ body,
         min-width: 110px;
     }
 
-    #wb_element_instance7 {
+    #div_twitter {
         display: block;
         top: 27px;
         left: 950px;
@@ -805,14 +778,6 @@ body,
         height: 32px;
         min-height: 32px;
         min-width: 32px;
-    }
-
-    #wb_element_instance7 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
     }
 
     #div_ecriture_Paris {
@@ -875,13 +840,10 @@ body,
         min-width: 110px;
     }
 
-    #div_bouton_LaRegionParisienne_enSavoirPlus a span {
-        padding: 8px 0 0 0;
-    }
-
     #div_bouton_LaRegionParisienne_enSavoirPlus a {
         width: 106px;
         height: 36px;
+        padding: 8px 0 0 0;
     }
 
     #div_ecriture_guidevoyage {
@@ -1125,7 +1087,7 @@ body,
 
 @media(min-width:992px) {
     #wb_header {
-        height: 698px;
+        height: 0px;
     }
 
     #wb_main {
@@ -1169,7 +1131,7 @@ body,
         min-width: 300px;
     }
 
-    #wb_element_instance3 {
+    #div_instagram {
         display: block;
         top: 27px;
         left: 900px;
@@ -1179,15 +1141,8 @@ body,
         min-width: 32px;
     }
 
-    #wb_element_instance3 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
-    }
 
-    #wb_element_instance4 {
+    #div_facebook {
         display: block;
         top: 27px;
         left: 850px;
@@ -1195,14 +1150,6 @@ body,
         height: 32px;
         min-height: 32px;
         min-width: 32px;
-    }
-
-    #wb_element_instance4 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
     }
 
     #div_ecriture_nombasdepage {
@@ -1225,7 +1172,7 @@ body,
         min-width: 110px;
     }
 
-    #wb_element_instance7 {
+    #div_twitter {
         display: block;
         top: 27px;
         left: 950px;
@@ -1233,14 +1180,6 @@ body,
         height: 32px;
         min-height: 32px;
         min-width: 32px;
-    }
-
-    #wb_element_instance7 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
     }
 
     #div_ecriture_Paris {
@@ -1303,13 +1242,11 @@ body,
         min-width: 110px;
     }
 
-    #div_bouton_LaRegionParisienne_enSavoirPlus a span {
-        padding: 8px 0 0 0;
-    }
 
     #div_bouton_LaRegionParisienne_enSavoirPlus a {
         width: 106px;
         height: 36px;
+        padding: 8px 0 0 0;
     }
 
     #div_ecriture_guidevoyage {
@@ -1321,6 +1258,7 @@ body,
         min-height: 28px;
         min-width: 280px;
     }
+
 
     #div_ecriture_visiteinoubliable {
         display: block;
@@ -1553,7 +1491,7 @@ body,
 
 @media(min-width:1200px) {
     #wb_header {
-        height: 698px;
+        height: 0px;
     }
 
     #wb_main {
@@ -1597,7 +1535,7 @@ body,
         min-width: 300px;
     }
 
-    #wb_element_instance3 {
+    #div_instagram {
         display: block;
         top: 27px;
         left: 900px;
@@ -1607,15 +1545,8 @@ body,
         min-width: 32px;
     }
 
-    #wb_element_instance3 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
-    }
 
-    #wb_element_instance4 {
+    #div_facebook {
         display: block;
         top: 27px;
         left: 850px;
@@ -1623,14 +1554,6 @@ body,
         height: 32px;
         min-height: 32px;
         min-width: 32px;
-    }
-
-    #wb_element_instance4 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
     }
 
     #div_ecriture_nombasdepage {
@@ -1653,7 +1576,7 @@ body,
         min-width: 110px;
     }
 
-    #wb_element_instance7 {
+    #div_twitter {
         display: block;
         top: 27px;
         left: 950px;
@@ -1661,14 +1584,6 @@ body,
         height: 32px;
         min-height: 32px;
         min-width: 32px;
-    }
-
-    #wb_element_instance7 img {
-        position: static;
-        top: 0;
-        left: 0;
-        width: 32px;
-        height: 32px;
     }
 
     #div_ecriture_Paris {
@@ -1731,13 +1646,11 @@ body,
         min-width: 110px;
     }
 
-    #div_bouton_LaRegionParisienne_enSavoirPlus a span {
-        padding: 8px 0 0 0;
-    }
 
     #div_bouton_LaRegionParisienne_enSavoirPlus a {
         width: 106px;
         height: 36px;
+        padding: 8px 0 0 0;
     }
 
     #div_ecriture_guidevoyage {
